--- a/management-report/markdown/management-report.Rmd
+++ b/management-report/markdown/management-report.Rmd
@@ -10,7 +10,6 @@ output:
 ```{r load-setup, include=FALSE}
 source(here::here("code", "00_setup-environment.R"))
 library(crosstalk) # for drop down menus
-#library(phsstyles)
 library(htmltools)
 
 # Write numbers with thousands separator
@@ -32,7 +31,7 @@ detach("package:tidylog", unload = TRUE)
 walk(dir(here::here("functions"), full.names = TRUE), source)
 
 
-# Load PDS data
+# Load PDS monthly data
 pds <- read_rds(get_mi_data_path("final_data", ext = "rds", test_output = test_output)) %>% 
   
   # Remove codes from board and IJB
@@ -52,7 +51,7 @@ err <- read_rds(get_mi_data_path("error_data", ext = "rds", test_output = test_o
                                 "Unknown",
                                 str_sub(ijb, 11, -1)))
 
-# calculate referrals for Scotland and health boards
+# calculate monthly referrals for Scotland and health boards
 pds_ijb <- pds %>% arrange(ijb)
 
 pds_ijb %<>% rename(geog = ijb) 
@@ -72,12 +71,12 @@ pds_hb %<>% rename(geog = ijb)
 
 pds_hb$geog<- factor(pds_hb$geog, levels = unique(pds_hb$geog))
 
-# combine data for ijb, hb and Scotland
+# combine monthly data for ijb, hb and Scotland
 pds_all <- bind_rows(pds_scot, pds_ijb, pds_hb)
 
 pds_all$geog<- factor(pds_all$geog, levels = unique(pds_all$geog))
 
-#get totals for all geogs, hbs, ijbs, scotland
+#get annual totals for all geogs, hbs, ijbs, scotland
 pds_all_totals <- pds_all %>% group_by(geog, fy, age_grp_2 = "All") %>% summarise(total_referrals = sum(referrals))
 
 pds_ijb_totals <- pds_ijb %>% group_by(geog, fy, age_grp_2 = "All") %>% summarise(total_referrals = sum(referrals))
@@ -85,34 +84,6 @@ pds_ijb_totals <- pds_ijb %>% group_by(geog, fy, age_grp_2 = "All") %>% summaris
 pds_hb_totals <- pds_hb %>% group_by(geog, fy, age_grp_2 = "All") %>% summarise(total_referrals = sum(referrals))
 
 pds_scot_totals <- pds_scot %>% group_by(geog, fy, age_grp_2 = "All") %>% summarise(total_referrals = sum(referrals))
-
-
-#get totals for all geogs, hbs, ijbs, scotland with LARGE AGE GROUPS
-pds_all_totals_2 <- bind_rows(pds_all_totals,
-  pds_all %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy, age_grp_2) %>% summarise(total_referrals = sum(referrals))
-)
-
-pds_all_totals_2$age_grp_2<- factor(pds_all_totals_2$age_grp_2, levels = c("All", "65+", "64 and Under"))
-
-pds_ijb_totals_2 <- bind_rows(pds_ijb_totals,
-    pds_ijb %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy, age_grp_2) %>% summarise(total_referrals = sum(referrals))
-)
-
-pds_ijb_totals_2$age_grp_2<- factor(pds_ijb_totals_2$age_grp_2, levels = c("All", "65+", "64 and Under"))
-
-
-pds_hb_totals_2 <- bind_rows(pds_hb_totals,
-    pds_hb %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy, age_grp_2) %>% summarise(total_referrals = sum(referrals))
-)
-
-pds_hb_totals_2$age_grp_2<- factor(pds_hb_totals_2$age_grp_2, levels = c("All", "65+", "64 and Under"))
-
-
-pds_scot_totals_2 <- bind_rows(pds_scot_totals,
-    pds_scot %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy, age_grp_2) %>% summarise(total_referrals = sum(referrals))
-)
-
-pds_scot_totals_2$age_grp_2<- factor(pds_scot_totals_2$age_grp_2, levels = c("All", "65+", "64 and Under"))
 
 #load population rates data
 pop_data <- read_rds("//conf/dementia/A&I/Outputs/management-report/lookups/pop_data.rds")
@@ -137,22 +108,16 @@ comp_data <- read_rds(get_mi_data_path("comp_data", ext = "rds", test_output = t
 
 ```
 
-<script>
-
-var pds_year = "`r current_fy`";
-
-var ldp_year = "`r last_full_year`";
-
-</script>
-
 ```{r glossary calculations}
+#load individual data
 ldp <- read_rds(get_mi_data_path("ldp_data", ext = "rds", test_output = test_output))
 
+#calculate total number of referrals where age is known and percentage of those that are 65+
 total_age_known <- ldp %>% filter(age_grp != "Unknown") %>% nrow()
 age_65_plus <-ldp %>% filter(age >= 65) %>% nrow()
-
 perc_65_plus <- round(age_65_plus/total_age_known*100,1)
 
+#calculate number of unknown records
 age_unknown <- ldp %>% filter(age_grp == "Unknown") %>% nrow()
 sex_unknown <- ldp %>% filter(sex %in% c("98 Not Specified", "99 Not Known")) %>% nrow()
 simd_unknown <- ldp %>% filter(simd == "Unknown") %>% nrow()
@@ -250,7 +215,6 @@ Row
 
 
 
-
 Methodology {.hidden}
 =================================================
 Sidebar - methodology {.sidebar}
@@ -328,7 +292,7 @@ The following method is used to determine whether a service user has met the sta
 
 This part of the LDP standard is calculated as: 
 
-![](ldpequation.png)
+![](ldpequation.png) <!-- make sure this PNG file is in same folder as this script -->
 
 Service users for whom it is not yet known if they have met the standard as their PDS is ongoing are excluded from the percentage figures.
 
@@ -419,19 +383,19 @@ e.g. the rate for SIMD 1 (the most deprived quintile) for a particular area is c
 
 Across the reported years there are a small number of records (`r age_unknown` in total) with an incomplete date of birth and therefore the age group is unknown. These records have been excluded from the age group analysis. 
 
-*For the rates calculations, for financial year 2024/25 the Mid-2023 populations are used as this is the latest available estimate.*  <!-- UPDATE when new population estimates are available -->
+*For the rates calculations, for financial year 2024/25 the Mid-2023 populations are used as this is the latest available estimate.*  <!-- UPDATE when new population estimates are available / when new financial year begins -->
 
 **Gender:** Gender is based on the sex recorded for each referral.  
 
 Across the reported years there are `r sex_unknown` records in total where sex is either not specified (includes refused/not provided) or not known (i.e. indeterminate sex, includes ‘Intersex’). These records have been excluded from the gender analysis.
 
-*For the rates calculations, for financial year 2024/25 the Mid-2023 populations are used as this is the latest available estimate.*  <!-- UPDATE when new population estimates are available -->
+*For the rates calculations, for financial year 2024/25 the Mid-2023 populations are used as this is the latest available estimate.*  <!-- UPDATE when new population estimates are available / when new financial year begins -->
 
 **Deprivation:** Deprivation is calculated by matching postcodes grouped into small geographical areas known as datazones to the Scottish Index of Multiple Deprivation (SIMD) quintiles. SIMD has seven domains (income, employment, education, housing, health, crime, and geographical access) at data zone level, which have been combined into an overall index to pick out area concentrations of multiple deprivation. Each deprivation quintile indicates the level of deprivation using a scale of 1 (most deprived quintile) to 5 (least deprived quintile). At Scotland level, approximately one fifth of the general population are within each deprivation quintile. The quintiles used in this report are from SIMD 2020v2. Further information on SIMD can be found on the [Scottish Government](https://www.gov.scot/collections/scottish-index-of-multiple-deprivation-2020/){target="_blank"} website.
 
 Across the reported years there are `r simd_unknown` records where it was not possible to assign a deprivation category. Possible reasons for not being able to assign a deprivation category are that no postcode was provided or the postcode provided is invalid, not in Scotland, or is a newly added postcode. These records have been excluded from the deprivation analysis.
 
-*For the rates calculations, for financial years 2023/24 and 2024/25 the Mid-2022 populations are used as this is the latest available estimate.*  <!-- UPDATE when new population estimates are available -->
+*For the rates calculations, for financial years 2023/24 and 2024/25 the Mid-2022 populations are used as this is the latest available estimate.*  <!-- UPDATE when new population estimates are available / when new financial year begins -->
 
 ***
 
@@ -504,13 +468,14 @@ Row {data-height=730}
 ### <!-- No Title -->
 
 ```{r}
+#load navigation guide screenshot
 bscols(widths = 12, 
        div(style = css(width="97%", marginLeft="20px"),
-       img(style = css(width="100%"), src="navigation-guide.png")))
+       img(style = css(width="100%"), src="navigation-guide.png"))) #make sure this PNG file is in same folder as this script
 
 ```
 
-<!-- Scotland -->
+<!-- Scotland subpage-->
 
 ```{r scotland, include=FALSE}
 
@@ -525,8 +490,7 @@ scotland <- map(.x = sort(unique(pds$fy)),
 
 `r paste(knitr::knit_child(text = scotland), collapse = '')`
 
-
-<!-- HEALTH BOARDS -->
+<!-- HEALTH BOARDS subpages -->
 
 ```{r health-boards, include=FALSE}
 
@@ -542,14 +506,13 @@ health_boards <- pmap(expand.grid(sort(unique(pds$fy)),
 
 `r paste(knitr::knit_child(text = health_boards), collapse = '')`
 
-
-<!-- TOTAL REFERRALS - TRENDS & RATES -->
+<!-- TOTAL REFERRALS - TRENDS & RATES subpage -->
 `r knitr::knit_child("subpage-trends.Rmd")`
 
-<!-- DEMOGRAPHICS -->
+<!-- DEMOGRAPHICS subpage-->
 `r knitr::knit_child("subpage-demographics.Rmd")`
 
-<!-- PATHWAYS -->
+<!-- PATHWAYS subpage-->
 `r knitr::knit_child("subpage-pathways.Rmd")`
 
 Data Quality
@@ -607,6 +570,7 @@ Row
 The table below shows the percentage of records which contain one or more queries/errors. Records with a missing diagnosis date or diagnosis date outwith the reporting period are not included in the below counts. Duplicate records are included.
 
 ```{r error summary}
+#create error summary table
 err %>% 
   group_by(fy, health_board) %>% 
   summarise(err_rate = round_half_up(sum(total_errors) / sum(records) * 100, 1),
@@ -621,17 +585,20 @@ err %>%
               values_from = err_rate,
               values_fill = list(err_rate = "\\-")) %>%
   rename(`Health Board` = health_board) %>%
-  kable() %>%
+  # right justify numeric columns
+     kable(align = c("l", rep("r", length(unique(err$fy)) + 1))) %>%
   kable_styling(full_width = FALSE) %>%
-  row_spec(15, bold = TRUE) %>%
-  # Add header above table 
+  # make Scotland row bold
+     row_spec(15, bold = TRUE) %>%
+ # Add header above table 
   add_header_above(
         c(" " = 1,
           "Financial Year of Diagnosis" = length(all_years),
           " " = 1)) %>%
+  #add footnote
   add_footnote(label = paste("A dash (\\-) indicates no records were submitted",
                              "for diagnoses in this year."),
-               notation = "none")
+               notation = "none") 
 ```
 
 
@@ -681,7 +648,7 @@ Row
 
 This page includes information about data quality. Any queries/errors outstanding following the resubmission deadline will be included in analytical outputs such as these management reports and annual publication. Therefore, the better quality of data submitted, the more accurate these figures will be.
 
-Row
+Row {data-height=700}
 -------------------------------------------------
 
 ### **Number of Records Submitted**
@@ -689,6 +656,7 @@ Row
 The table below shows the number of records submitted by each Health Board. Records with a missing diagnosis date or diagnosis date outwith the reporting period are not included in the below counts. Duplicate records are included.
 
 ```{r record-summary}
+# add table showing number of records submitted by each health board
 err %>%
   filter(str_sub(fy, 1, 4) >= year(start_date)) %>%
   group_by(fy, health_board, ijb) %>% 
@@ -706,11 +674,13 @@ err %>%
   arrange(health_board, ijb) %>%
   rename(`Health Board` = health_board,
          `Integration Joint Board (IJB)` = ijb) %>%
-  kable(align = c("l", "l", rep("r", length(unique(err$fy)) + 1))) %>%
+# right justify numeric columns
+     kable(align = c("l", "l", rep("r", length(unique(err$fy)) + 1))) %>%
   kable_styling(full_width = FALSE) %>%
-  row_spec(length(unique(paste(err$health_board, err$ijb))), bold = TRUE) %>%
+# make Scotland row bold
+    row_spec(length(unique(paste(err$health_board, err$ijb))), bold = TRUE) %>%
   collapse_rows(columns = 1, valign = "top") %>%
-  scroll_box(height = "740px")
+  scroll_box(height = "570px")
 ```
 
 Completion {.hidden}
@@ -760,7 +730,7 @@ Row
 
 This page includes information about data quality. Any queries/errors outstanding following the resubmission deadline will be included in analytical outputs such as these management reports and annual publication. Therefore, the better quality of data submitted, the more accurate these figures will be.
 
-Row {.tabset data-height=790}
+Row {.tabset data-height=700}
 -------------------------------------------------
 
 ### **Accommodation Type**
@@ -792,7 +762,7 @@ headers <- htmltools::withTags(table(
 ))
 
 bscols(widths = 12,
-       div(style = css(width="98%", height="660px", margin="15px"),
+       div(style = css(width="98%", height="550px", margin="15px"),
           DT::datatable(accom_comp_data,
                         container = headers,
                         rownames = TRUE,
@@ -832,7 +802,7 @@ carer_comp_data<-comp_data %>%
 
 
 bscols(widths = 12,
-       div(style = css(width="98%", height="660px", margin="15px"),
+       div(style = css(width="98%", height="550px", margin="15px"),
           DT::datatable(carer_comp_data,
                         container = headers,
                         rownames = TRUE,
@@ -890,7 +860,7 @@ headers_ytbd <- htmltools::withTags(table(
 
 
 bscols(widths = 12,
-       div(style = css(width="98%", height="660px", margin="15px"),
+       div(style = css(width="98%", height="540px", margin="15px"),
           DT::datatable(subtype_comp_data,
                         container = headers_ytbd,
                         rownames = TRUE,
@@ -934,7 +904,7 @@ stage_comp_data <- comp_data %>%
   
 
 bscols(widths = 12,
-       div(style = css(width="98%", height="660px", margin="15px"),
+       div(style = css(width="98%", height="540px", margin="15px"),
           DT::datatable(stage_comp_data,
                         container = headers_ytbd,
                         rownames = TRUE,
@@ -976,7 +946,7 @@ model_comp_data <- comp_data %>%
   
 
 bscols(widths = 12,
-       div(style = css(width="98%", height="660px", margin="15px"),
+       div(style = css(width="98%", height="540px", margin="15px"),
           DT::datatable(model_comp_data,
                         container = headers_ytbd,
                         rownames = TRUE,
@@ -999,6 +969,15 @@ bscols(widths = 12,
 
 ```
 
+<!-- converts R environment objects for use with js script below -->
+<script>
+
+var pds_year = "`r current_fy`";
+
+var ldp_year = "`r last_full_year`";
+
+</script>
+
 ```{js }
 
 function filter_default() {
@@ -1006,7 +985,7 @@ function filter_default() {
   
 // all referrals - trends and rates  
   
-  document.getElementById("trend_filter_hb").getElementsByClassName("selectized") 
+ document.getElementById("trend_filter_hb").getElementsByClassName("selectized") 
   [0].selectize.setValue("NHS Ayrshire & Arran", false);
 
   document.getElementById("trend_filter_hb").getElementsByClassName("selectized")
@@ -1042,7 +1021,7 @@ function filter_default() {
   document.getElementById("trend_filter_outcomes_exp").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
   
-    document.getElementById("trend_filter_outcomes_met").getElementsByClassName("selectized") 
+  document.getElementById("trend_filter_outcomes_met").getElementsByClassName("selectized") 
   [0].selectize.setValue("Scotland", false);
 
   document.getElementById("trend_filter_outcomes_met").getElementsByClassName("selectized")
