--- a/management-report/markdown/subpage-demographics.Rmd
+++ b/management-report/markdown/subpage-demographics.Rmd
@@ -393,7 +393,7 @@ bscols(widths = c(1,10,NA), NULL, data_filter_ijb_age_pop_geog, NULL)
 ```
 
 <h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 0px"> Number of people referred to PDS per 10,000 population by Age Group and Integration Authority Area</h2>
-```{r plot-ijb-age-legend-pop2}
+```{r plot-ijb-age-legend-pop}
 
 bscols(widths = 12,
 div(style=css(marginBottom="-20px",height="65px"), plot_geog_bar_legend(pds_all_age %>% filter(geog == "Scotland"), measure = age_grp_2, colours = age_colours)))
@@ -401,10 +401,10 @@ div(style=css(marginBottom="-20px",height="65px"), plot_geog_bar_legend(pds_all_
 ```
 
 
-```{r plot-ijb-age-pop2}
+```{r plot-ijb-age-pop}
 
 bscols(widths = 12,
-  div(style = css(width="98%", height="355px", marginBottom="-20px"),
+  div(style = css(width="98%", height="350px", marginBottom="-20px"),
 plot_ly(pds_pop_age_data_ijb, x = ~geog, y = ~pop_rate_10000, meta = ~fy, hovertext = ~age_grp_2, type = 'bar', color = ~age_grp_2, colors = age_colours, 
         hovertemplate = paste0("%{x} <br>", "%{meta} <br>", "Age Group: %{hovertext} <br>",
                             "Rate per 10,000 Population: %{y}<extra></extra>")) %>% 
@@ -455,7 +455,7 @@ ijb_age_table_pop <- SharedData$new(ijb_pop_age_table_data, key = ~key, group = 
 
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="420px", margin="20px"),
+       div(style = css(width="97%", height="435px", margin="20px"),
 DT::datatable(ijb_age_table_pop, rownames = FALSE, selection = 'none',
               options = list(pageLength = 33,
                              scrollX = TRUE,
@@ -521,23 +521,23 @@ bscols(widths = c(1,5,NA),
 ```
 
 <h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 0px"> Number of people referred to PDS per 10,000 population by Age Group and Health Board</h2>
-```{r plot-hb-age-legend-pop2}
+```{r plot-hb-age-legend-pop}
 
 bscols(widths = 12,
-div(style=css(marginBottom="-20px",height="65px"), plot_geog_bar_legend(pds_all_age %>% filter(geog == "Scotland"), measure = age_grp_2, colours = age_colours)))
+div(style=css(marginBottom="-10px",height="65px"), plot_geog_bar_legend(pds_all_age %>% filter(geog == "Scotland"), measure = age_grp_2, colours = age_colours)))
 
 ```
 
 
-```{r plot-hb-age-pop2}
+```{r plot-hb-age-pop}
 
 bscols(widths = 12,
-  div(style = css(width="98%", height="355px", marginBottom="-20px"),
+  div(style = css(width="98%", height="365px", marginBottom="0px"),
 plot_ly(pds_pop_age_data_hb, x = ~geog, y = ~pop_rate_10000, meta = ~fy, hovertext = ~age_grp_2, type = 'bar', color = ~age_grp_2, colors = age_colours, 
         hovertemplate = paste0("%{x} <br>", "%{meta} <br>", "Age Group: %{hovertext} <br>",
                             "Rate per 10,000 Population: %{y}<extra></extra>")) %>% 
   layout(clickmode = "none", showlegend = FALSE, margin = list(l = -5, b = 10, t = 40),
-         xaxis = list(title = "Integration Authority Area", showline = FALSE, linecolor = "#b3b3b3",
+         xaxis = list(title = "Health Board", showline = FALSE, linecolor = "#b3b3b3",
                       categoryorder = "trace", tickangle = -45, titlefont = list(size = 16)),
          yaxis = list(title = "Rate per 10,000 Population", linecolor = "#b3b3b3", titlefont = list(size = 16))
       ) %>%
@@ -576,14 +576,14 @@ hb_pop_age_table_data <- #bind_rows(
   mutate(across(everything(), ~if_else(age_grp_2_group == "All", 
                                        replace_na(.x, "-"), 
                                        replace_na(.x, " ")))) %>%
-             rename(`Integration Authority Area` = geog) 
+             rename(`Health Board` = geog) 
 
 
 hb_age_table_pop <- SharedData$new(hb_pop_age_table_data, key = ~key, group = "hb_age_pop")
 
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="460px", margin="20px"),
+       div(style = css(width="97%", height="460px", margin="20px", marginTop ="45px"),
 DT::datatable(hb_age_table_pop, rownames = FALSE, selection = 'none',
               options = list(pageLength = 15,
                              scrollX = TRUE,
@@ -637,7 +637,7 @@ plot_rate_line_legend_1(legend_data)),NULL
 ```{r plot-trend-age-pop}
 
 bscols(widths = 12,
-  div(style = css(width="98%", height="370px"),
+  div(style = css(width="98%", height="350px"),
 plot_rate_line(pds_pop_age_data, measure = age_grp_2, measure_text = "Age Group: ", y = "Rate per 10,000 Population", scales = "free_y", colours = age_colours, facet_space = -5))
 )
 
@@ -656,7 +656,7 @@ trend_pop_age_table <- SharedData$new(trend_pop_age_table_data, key = ~geog, gro
 
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="170px", margin="20px"),
+       div(style = css(width="97%", height="165px", margin="20px"),
 DT::datatable(trend_pop_age_table, rownames = FALSE, selection = 'none',
               options = list(pageLength = 10,
                              scrollX = TRUE,
@@ -778,7 +778,7 @@ div(style=css(marginBottom="-20px",height="65px"), plot_geog_bar_legend(ldp_all_
 
 ```{r plot-ijb-age-ldp}
 bscols(widths = 12,
-  div(style = css(width="98%", height="355px", marginBottom="-20px"),
+  div(style = css(width="98%", height="350px", marginBottom="-20px"),
 plot_ly(ldp_age_data_ijb, x = ~geog, y = ~perc_met, meta = ~fy, hovertext = ~age_grp_2, type = 'bar', color = ~age_grp_2, colors = age_colours, 
         hovertemplate = paste0("%{x} <br>", "%{meta} <br>", "Age Group: %{hovertext} <br>",
                             "%{y}<extra></extra>")) %>% 
@@ -855,7 +855,7 @@ ijb_age_table_ldp <- SharedData$new(ijb_ldp_age_table_data, key = ~key, group = 
 
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="410px", margin="20px"),
+       div(style = css(width="97%", height="435px", margin="20px"),
 DT::datatable(ijb_age_table_ldp, rownames = FALSE, selection = "none", #extensions = "FixedColumns",
               options = list(pageLength = 66,
                              scrollX = TRUE,
@@ -924,7 +924,7 @@ bscols(widths = c(1,5,NA),
 ```{r plot-hb-age-legend-ldp}
 
  bscols(widths = 12,
-div(style=css(marginBottom="-20px",height="65px"), plot_geog_bar_legend(ldp_all_age %>% filter(geog == "Scotland"), measure = age_grp_2, colours = age_colours)))
+div(style=css(marginBottom="-10px",height="65px"), plot_geog_bar_legend(ldp_all_age %>% filter(geog == "Scotland"), measure = age_grp_2, colours = age_colours)))
 
 ```
 
@@ -932,7 +932,7 @@ div(style=css(marginBottom="-20px",height="65px"), plot_geog_bar_legend(ldp_all_
 ```{r plot-hb-age-ldp}
 
 bscols(widths = 12,
-  div(style = css(width="98%", height="355px", marginBottom="-20px"),
+  div(style = css(width="98%", height="365px", marginBottom="0px"),
 plot_ly(ldp_age_data_hb, x = ~geog, y = ~perc_met, meta = ~fy, hovertext = ~age_grp_2, type = 'bar', color = ~age_grp_2, colors = age_colours, 
         hovertemplate = paste0("%{x} <br>", "%{meta} <br>", "Age Group: %{hovertext} <br>",
                             "%{y}<extra></extra>")) %>% 
@@ -1002,14 +1002,14 @@ hb_ldp_age_table_data <- bind_rows(hb_age_totals_data, hb_age_ldp_data) %>%
   arrange(geog, key, desc(type)) %>% 
   mutate(geog = if_else(type == "% Met Standard/Exempt", " ", geog)) %>% 
  rename(" " = "type") %>% 
-    rename(`Integration Authority Area` = geog)
+    rename(`Health Board` = geog)
 
 
 hb_age_table_ldp <- SharedData$new(hb_ldp_age_table_data, key = ~key, group = "hb_age_ldp")
 
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="470px", margin="20px"),
+       div(style = css(width="97%", height="460px", margin="20px", marginTop="40px"),
 DT::datatable(hb_age_table_ldp, rownames = FALSE, selection = "none", #extensions = "FixedColumns",
               options = list(pageLength = 30,
                              scrollX = TRUE,
@@ -1060,7 +1060,7 @@ plot_ldp_line_legend_1(legend_data)),NULL
 
 ```{r plot-ldp-age}
 bscols(widths = 12,
-  div(style = css(width="98%", height="370px"),
+  div(style = css(width="98%", height="350px"),
 plot_ldp_line(ldp_all_age_data, measure = age_grp_2, measure_text = "Age Group: ", colours = age_colours))
 )
 
@@ -1093,7 +1093,7 @@ ldp_age_table <- SharedData$new(ldp_age_table_data, key = ~geog, group = "ldp_ag
 
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="280px", margin="20px"),
+       div(style = css(width="97%", height="275px", margin="20px"),
 DT::datatable(ldp_age_table, rownames = FALSE, selection = 'none',
               options = list(pageLength = 10,
                              scrollX = TRUE,
@@ -1205,7 +1205,7 @@ div(style=css(marginBottom="-20px",height="65px"), plot_geog_bar_legend(pds_all_
 
 ```{r plot-ijb-sex-pop}
 bscols(widths = 12,
-  div(style = css(width="98%", height="385px", marginBottom="-30px"),
+  div(style = css(width="98%", height="385px", marginBottom="-20px"),
 plot_geog_bar(pds_pop_sex_data_ijb, y_value = pop_rate_10000, measure = sex, measure_text = "Gender: ",
                x = "Integration Authority Area", y = "Rate per 10,000 Population", y_value_text = "Rate per 10,000 Population: "))
 )
@@ -2432,7 +2432,7 @@ hb_ldp_simd_table_data <- bind_rows(hb_simd_totals_data, hb_simd_ldp_data) %>%
   arrange(geog, key, desc(type)) %>% 
   mutate(geog = if_else(type == "% Met Standard/Exempt", " ", geog)) %>% 
  rename(" " = "type") %>% 
-    rename(`Integration Authority Area` = geog)
+    rename(`Health Board` = geog)
 
 
 hb_simd_table_ldp <- SharedData$new(hb_ldp_simd_table_data, key = ~key, group = "hb_simd_ldp")
