--- a/management-report/markdown/subpage-scotland.Rmd
+++ b/management-report/markdown/subpage-scotland.Rmd
@@ -135,7 +135,7 @@ est_date3 <- dmy(01042023)
               paste0(" ", 
               "**Please note:** ",
               "*PHS have identified issues with the data submitted by NHS Tayside (2023/24 ", 
-              "and 2024/25), NHS Highland (2024/25 Q3) and NHS Lanarkshire (2024/25 Q3), which ",
+              "and 2024/25), NHS Lanarkshire (2024/25), NHS Borders (2024/25), and NHS Fife (2024/25) which ",
               "has resulted in some records showing as incorrectly having ", 
               "met the standard. PHS are working with the Health Boards to try and rectify ", 
               "this data issue in future submissions.*"), 
